Fixing errors, adding background

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <script type="text/javascript" src="./timer.js"></script>
     <script type="text/javascript" src="./gameengine.js"></script>
     <script type="text/javascript" src="./util.js"></script>
+    <script type="text/javascript" src="./animator.js"></script>
     <script type="text/javascript" src="./cat.js"></script>
     <script type="text/javascript" src="./main.js"></script>
 </head>
 <body>
-    <canvas id="gameWorld" width="1024" height="768" style="background: white; border: 1px solid black"></canvas>
+    <canvas id="gameWorld" width="1024" height="720" style="background-image: url('./background4cat.png') ; border: 1px solid black"></canvas>
 </body>
 </html>
